// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Spec Snapshots should render selected tab 1`] = `
.c0 {
  display: inline-block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  position: relative;
  font-weight: 600;
  color: #9b9c9e;
  overflow: hidden;
  cursor: default;
  text-align: center;
  color: #001B38;
}

.c0:hover {
  color: #001B38;
}

.c1 {
  margin-bottom: 12px;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
}

.c2 {
  background: transparent;
  height: 4px;
  border-top-left-radius: 100px;
  border-top-right-radius: 100px;
  background: #001B38;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Example Tab
    </div>
    <div
      class="c2"
    />
  </div>
</div>
`;

exports[`<Button /> Spec Snapshots should render tab 1`] = `
.c0 {
  display: inline-block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  position: relative;
  font-weight: 600;
  color: #9b9c9e;
  overflow: hidden;
  cursor: default;
  text-align: center;
}

.c0:hover {
  color: #001B38;
}

.c1 {
  margin-bottom: 12px;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
}

.c2 {
  background: transparent;
  height: 4px;
  border-top-left-radius: 100px;
  border-top-right-radius: 100px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Example Tab
    </div>
    <div
      class="c2"
    />
  </div>
</div>
`;

exports[`<Button /> Spec Snapshots should render tab group 1`] = `
.c1 {
  display: inline-block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  position: relative;
  font-weight: 600;
  color: #9b9c9e;
  overflow: hidden;
  cursor: default;
  text-align: center;
  color: #001B38;
}

.c1:hover {
  color: #001B38;
}

.c4 {
  display: inline-block;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  position: relative;
  font-weight: 600;
  color: #9b9c9e;
  overflow: hidden;
  cursor: default;
  text-align: center;
}

.c4:hover {
  color: #001B38;
}

.c2 {
  margin-bottom: 12px;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
}

.c3 {
  background: transparent;
  height: 4px;
  border-top-left-radius: 100px;
  border-top-right-radius: 100px;
  background: #001B38;
}

.c5 {
  background: transparent;
  height: 4px;
  border-top-left-radius: 100px;
  border-top-right-radius: 100px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row;
  -ms-flex-flow: row;
  flex-flow: row;
  gap: 16px;
  max-width: 100%;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Example Tab 1
      </div>
      <div
        class="c3"
      />
    </div>
    <div
      class="c4"
    >
      <div
        class="c2"
      >
        Example Tab 2
      </div>
      <div
        class="c5"
      />
    </div>
    <div
      class="c4"
    >
      <div
        class="c2"
      >
        Example Tab 3
      </div>
      <div
        class="c5"
      />
    </div>
  </div>
</div>
`;
